--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,22 +7,15 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #faf0e8; /* <--- Alterado de #0a0a0a para o fundo do seu site */
     --foreground: #ededed;
   }
 }
 
 body {
-  background-color: #faf0e8;
+  background-color: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
