--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 body {
   background-color: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif, 'Inter';
 }
 
 .no-scrollbar::-webkit-scrollbar {
@@ -26,4 +26,8 @@ body {
 .no-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+
+html {
+  scroll-behavior: smooth;
 }
